<resources>
    <string name="app_name">Remik</string>
    <string name="add_player">Dodaj gracza</string>
    <string name="player">player</string>
    <string name="player_first_name">Imię</string>
    <string name="player_nickname">Nick</string>
    <string name="add">Dodaj</string>
    <string name="cancel">Anuluj</string>
    <string name="database_name">remik.db</string>
    <string name="players">Gracze</string>
    <string name="add_player_successfull">Pomyślnie dodano gracza.</string>
    <string name="player_nickname_exists">Gracz o takim nicku już istnieje</string>
    <string name="add_player_fail">Nie udało się dodać gracza.</string>
    <string name="points">pkt</string>
    <string name="game">Gra</string>
    <string name="choose_player">Wybierz graczy</string>
    <string name="ok">OK</string>
    <string name="load_player_failed">Nie udało się załadować graczy.</string>
    <string name="podium">Podium</string>
    <string name="top_players">Najlepsi gracze</string>
    <string name="number_of_games">gier</string>
    <string name="avg_points">śr. pkt</string>
    <string name="start">Rozpocznij</string>
    <string name="finish">Zakończ</string>
    <string name="shared_pref">SharefPreferences</string>
    <string name="current_game">Obecna gr</string>
    <string name="delete">Usuń</string>
    <string name="save_game_player_does_not_exist">W trakcie gry jeden z graczy został usunięty. Gra nie zostanie zapisana.</string>
    <string name="unexpected_error">Wystąpił nieoczikwany błąd podczas zapisu gry.</string>
    <string name="move_on">Dalej</string>
    <string name="end_round">Zakończ runde</string>
    <string name="remove_user_failed">Nie udało się usunąć użytkownika</string>
    <string name="remove_player_failed">Nie udało się usunąć gracza.</string>
    <string name="set_up_game_failed">Nie udało się rozpocząć gry!</string>
    <string name="points_by_speech">Dodaj punkty głosowo</string>
    <string name="speech_recognition_not_supported">Funkcja rozpoznawaniu głosu nie jest dostępna na tym urządzeniu</string>
    <string name="expand">Rozwiń</string>
    <string name="game_history">Historia gier</string>
    <string name="history">Historia gier</string>
    <string name="result">Wynik gry</string>
    <string name="acra_toast">Wystąpił błąd, proszę wyślij maila ze szczegółami.</string>
</resources>
