<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gamePlayers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/game_background"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="3.25"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/startButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:theme="@style/HighlightedButton"
            android:background="@color/blueberry"
            android:padding="8dp"
            android:text="@string/start"
            android:textColor="@color/tangarine" />

        <Button
            android:id="@+id/endRound"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            style="?android:attr/buttonBarButtonStyle"
            android:theme="@style/HighlightedButton"
            android:background="@color/darkNavy"
            android:padding="8dp"
            android:text="@string/end_round"
            android:textColor="@color/tangarine"
            android:enabled="false"/>

        <ImageButton
            android:id="@+id/pointsBySpeech"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            app:srcCompat="@android:drawable/ic_btn_speak_now"
            android:background="@color/darkNavy"
            android:tint="@color/tangarine"
            android:contentDescription="@string/points_by_speech"
            android:enabled="false"/>

        <Button
            android:id="@+id/finishButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:theme="@style/HighlightedButton"
            android:background="@color/blueberry"
            android:padding="8dp"
            android:text="@string/finish"
            android:textColor="@color/tangarine"
            android:enabled="false"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>